# mcp-compressor

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  THIRD_PARTY_NOTICE.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.atlassian/: OWNER
.github/actions/setup-python-env/: action.yml
.github/workflows/: atlassian-mcp-integration.yml  main.yml  on-release-main.yml  publish-python-package.yml  publish-rust-crate.yml  publish-typescript-package.yml  publish-typescript.yml  release-artifacts.yml  rust-migration-artifacts.yml
architecture/: index.html
concepts/configuration/: index.html
concepts/how-it-works/: index.html
crates/mcp-compressor/: Cargo.toml
crates/mcp-compressor-core/: Cargo.toml
crates/mcp-compressor-core/src/: error.rs  lib.rs  main.rs  oauth.rs  sdk.rs
crates/mcp-compressor-core/src/app/: banner.rs  entrypoint.rs  mod.rs  options.rs  paths.rs  runtime.rs
crates/mcp-compressor-core/src/cli/: help.rs  mapping.rs  mod.rs  parser.rs
crates/mcp-compressor-core/src/client_gen/: cli.rs  generator.rs  mod.rs  python.rs  typescript.rs
crates/mcp-compressor-core/src/compression/: engine.rs  levels.rs  mod.rs
crates/mcp-compressor-core/src/config/: mod.rs  topology.rs
crates/mcp-compressor-core/src/ffi/: client_gen.rs  dto.rs  host_transform.rs  mod.rs  node.rs  oauth.rs  pure.rs  python.rs  session.rs  types.rs
crates/mcp-compressor-core/src/llm_assist/: mod.rs
crates/mcp-compressor-core/src/proxy/: auth.rs  mod.rs  registry.rs  router.rs  server.rs
crates/mcp-compressor-core/src/server/: backend.rs  compressed.rs  connect.rs  dynamic_http_client.rs  mod.rs  registration.rs  tool_cache.rs
crates/mcp-compressor-core/tests/: cli_binary.rs  compressed_server_stdio.rs  compression_levels.rs  config_sources.rs  generated_clients.rs  multi_server.rs  proxy_http.rs  transform_modes.rs
crates/mcp-compressor-core/tests/common/: mod.rs
crates/mcp-compressor-core/tests/fixtures/: alpha_server.py  beta_server.py  rotating_auth_proxy.py
crates/mcp-compressor-node/: Cargo.toml
crates/mcp-compressor-node/src/: lib.rs
crates/mcp-compressor-python/: Cargo.toml
crates/mcp-compressor-python/src/: lib.rs
crates/mcp-compressor/src/: lib.rs  main.rs
crates/mcp-compressor/tests/: public_api.rs  public_workflow.rs
development-release/: index.html
docs/: architecture.md  development-release.md  index.md  llm-assist-design.md  modules.md  rust-core-design.md  typescript.md
docs/concepts/: configuration.md  how-it-works.md
docs/development/: cli-parity-report.md  rust-migration.md
docs/examples/: atlassian.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: api-status.md  cli.md  sdk.md
docs/usage/: auth-and-remote.md  cli.md  generated-clients.md  just-bash.md  sdks.md
examples/atlassian/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
llm-assist-design/: index.html
mcp_compressor/: __init__.py  banner.py  bash_commands.py  cli_bridge.py  cli_script.py  cli_tools.py  just_bash_transform.py  logging.py  main.py  oauth.py  rust_core.py  tools.py  types.py
modules/: index.html
python/mcp-compressor/: README.md  pyproject.toml
python/mcp-compressor-rust/: README.md  pyproject.toml
python/mcp-compressor-rust/mcp_compressor_rust/: __init__.py  cli.py  client.py  core.py  just_bash_host.py
python/mcp-compressor-rust/tests/: test_cli.py  test_core.py
python/mcp-compressor/mcp_compressor/: __init__.py  _native_cli.py  adapters.py  cli.py  client.py  core.py  just_bash_host.py  transforms.py
python/mcp-compressor/tests/: test_cli.py  test_core.py  test_public_sdk_workflow.py
reference/api-status/: index.html
reference/cli/: index.html
reference/sdk/: index.html
rust-core-design/: index.html
scripts/: check_public_api_names.py  prepare_python_release.py  prepare_rust_crate_release.py  prepare_typescript_release.py
search/: search_index.json
testdata/golden/agent-facing/atlassian-like/: atlassian-help.txt  search-jira-issues-using-jql-help.txt
testdata/golden/agent-facing/cli/: alpha-echo-help.txt  alpha-help-tool-description.txt  alpha-help.txt  atlassian-search-jira-help.txt
testdata/golden/agent-facing/code/: alpha-python-help-tool-description.txt  (+2 more)
tests/: conftest.py  e2e_server_alpha.py  e2e_server_beta.py  mcp_server.py  test_atlassian_mcp_real_world.py  test_cli.py  test_e2e.py  test_integration.py  test_just_bash_transform.py  test_main.py  test_public_cli_workflows.py  test_release_version_scripts.py  test_rust_core_bridge.py  test_rust_core_normal_mode.py  test_tools.py
typescript/: .npmrc  README.md  index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json
typescript/src/: adapters.ts  backend-client.ts  bash_commands.ts  cli.ts  cli_bridge.ts  cli_mode.ts  cli_script.ts  cli_tools.ts  client.ts  config.ts  errors.ts  executable_tool_bridge.ts  formatting.ts  generated_clients.ts  index.ts  just_bash_commands.ts  just_bash_host.ts  just_bash_transform.ts  local_tool_bridge.ts  local_tools.ts  native.ts  native_client.ts  oauth.ts  python_bridge.ts  python_mode.ts  python_runtime_assets.ts  python_stubs.ts  runtime.ts  rust_core.ts  server.ts  tool_specs.ts  transforms.ts  types.ts  version.ts
typescript/tests/: agent_facing_snapshots.test.ts  backend-client-fetch.test.ts  cli_mode.test.ts  client.test.ts  config.test.ts  e2e.test.ts  executable_tool_bridge.test.ts  formatting.test.ts  just_bash_transform.test.ts  local_tools_schema.test.ts  oauth-redirect.test.ts  oauth.test.ts  python_bridge.test.ts  python_mode.test.ts  python_mode_e2e.test.ts  python_stubs.test.ts  runtime.test.ts  rust_core.test.ts  subpath_exports.test.ts  transforms_e2e.test.ts
typescript/tests/__snapshots__/: agent_facing_snapshots.test.ts.snap
usage/auth-and-remote/: index.html
usage/cli/: index.html
usage/generated-clients/: index.html
usage/just-bash/: index.html
usage/sdks/: index.html
(+3 files in other folders)
