[project]
name = "mcp-compressor-workspace"
version = "0.0.0"
description = "Workspace tooling for the Rust-backed mcp-compressor migration."
authors = [{ name = "Tim Esler", email = "tesler@atlassian.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastmcp==3.2.4",
]

[project.urls]
Homepage = "https://atlassian-labs.github.io/mcp-compressor/"
Repository = "https://github.com/atlassian-labs/mcp-compressor"
Documentation = "https://atlassian-labs.github.io/mcp-compressor/"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.5.0",
    "tox-uv>=1.29.0",
    "deptry>=0.24.0",
    "ty>=0.0.1a32",
    "ruff>=0.14.8",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.0",
    "pymdown-extensions>=10.19.1",
    "mkdocs-include-markdown-plugin>=7.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ty.environment]
python = "./.venv"
python-version = "3.10"

[tool.uv]
package = false

[tool.deptry]
extend_exclude = ["python/mcp-compressor-rust"]

[tool.ty.src]
include = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Avoid specifying long messages outside the exception class
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
default = true
