[package]
name    = "mcp-compressor-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "1"
rand       = "0.8"
tokio      = { version = "1", features = ["sync"] }
rmcp       = { version = "1.6.0", features = ["client", "server", "transport-child-process", "transport-streamable-http-server", "transport-streamable-http-client-reqwest"] }

[dev-dependencies]
# async test runtime and macros (#[tokio::test])
tokio    = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
# temporary directories for client_gen file-generation tests
tempfile = "3"
