[package]
name    = "mcp-compressor-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror  = "1"
rand       = "0.8"
tokio      = { version = "1", features = ["sync", "rt-multi-thread"] }
rmcp       = { version = "1.6.0", features = ["client", "server", "transport-child-process", "transport-io", "transport-streamable-http-server", "transport-streamable-http-client-reqwest", "reqwest-native-tls"] }
axum       = "0.8"

[dev-dependencies]
# async test runtime and macros (#[tokio::test])
tokio    = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
# temporary directories for client_gen file-generation tests
tempfile = "3"
# binary e2e contract tests
assert_cmd = "2"
predicates = "3"
