[package]
name    = "mcp-compressor-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "2.3.1"

[dependencies]
mcp-compressor-core = { path = "../mcp-compressor-core" }
napi = { version = "3.8.6", default-features = false, features = ["napi4"] }
napi-derive = "3.5.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
