[package]
name    = "mcp-compressor-python"
version = "0.1.0"
edition = "2021"

[lib]
name       = "_mcp_compressor_core"
crate-type = ["cdylib"]

[dependencies]
mcp-compressor-core = { path = "../mcp-compressor-core" }
pyo3 = { version = "0.28.3", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
